--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,14 @@
-= places
+= dweller
 
 Information about places: countries, states, cities etc.
 
 Currently, at a very initial stage. Suggestions are welcome.
 
 By now, only Brazil is supported.
+
+Usage (yes, must be improved):
+
+    class Country; include Dweller::Country; end
+    
+    rio = Country.load_country('brazil').state('RJ').
+    campos = rio.city('Campos dos Goytacazes')
